5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1590_1570.log
== TEST (2019-03-26 13:34:43) 
-- CODE:
texto=imput()
print(texto.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=imput()
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:34:54) 
-- CODE:
texto=input()
print(texto.lower())
-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:35:04) 
-- CODE:
texto=input()
print(texto.lower())
-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:35:27) 
-- CODE:
texto=input()
print(texto.lower())
-- EXECUTION TIME:
0.147212
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
primeiro_caso_de_teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
